fix(listing): Put StorefrontStatus in the correct service
